Rename button, adapt styling on small screens and fix some specs

--- a/app/assets/stylesheets/content/_wiki.sass
+++ b/app/assets/stylesheets/content/_wiki.sass
@@ -193,28 +193,10 @@ blockquote
     right: 15px
     padding: 0 0 0 0
 
-.toolbar-container + .wiki-content
+.toolbar-container ~ .wiki-content
   margin-top: -64px
 
-
 @include breakpoint(680px down)
-  .toolbar-container .toolbar-items
-    background: #fff
-    display: flex
-    margin-bottom: 20px
-    width: calc(100% + 5px)
+  .toolbar-container ~ .wiki-content
+    margin-top: 0
 
-    > li
-      -webkit-flex: 1 0 0
-      flex: 1 0 0
-
-      &:first-child
-        -webkit-flex: 3 0 0
-        flex: 3 0 0
-
-      .button
-        width: 100%
-        margin-top: 0
-
-  .wiki-title
-    margin-top: 4rem
